# wac/backend/src/main/java/dev/pioruocco/connecting/message/MessageRequest.java
@@ -1,5 +1,8 @@
 package dev.pioruocco.connecting.message;
 
+import jakarta.validation.constraints.NotBlank;
+import jakarta.validation.constraints.NotNull;
+import jakarta.validation.constraints.Size;
 import lombok.AllArgsConstructor;
 import lombok.Builder;
 import lombok.Getter;
@@ -13,9 +16,13 @@ import lombok.Setter;
 @Builder
 public class MessageRequest {
 
+    @NotBlank
+    @Size(max = 4096)
     private String content;
-    private String senderId;
-    private String receiverId;
+
+    @NotNull
     private MessageType type;
+
+    @NotNull
     private String chatId;
 }
